Fri Nov  2 07:48:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Service_Config.{h,cpp}:
          Removed the patch for bugzilla 2980, this results in a memory
          leak of 10Kb for each thread that uses the ACE_Service_Config_Guard.
          This memory leak is documented in bugzilla 3108. For bugzilla 2980
          we need to have a different patch without reintroducing the
          memory leak.

        * ace/Timer_Heap_T.h:
          Doxygen changes

Thu Nov  1 19:59:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        Reverted the change below, it seems to cause problems with msvc 71.

        Thu Nov  1 11:11:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
        * ace/Service_Config.h:

Thu Nov  1 16:57:11 UTC 2007  Steve Huston  <shuston@riverace.com>

        * contrib/FaCE/FaCE.mpc:
        * contrib/FaCE/FaCENOACE.mpc: Added aygshell to lit_libs to fix link
          errors.

Thu Nov  1 14:40:00 UTC 2007  Simon Massey  <simon.massey@prismtech.com>

        * ace/OS_NS_Thread.cpp:

          Systems with ACE_HAS_BROKEN_THREAD_KEYFREE requires some
          cleanup within ACE_OS::thr_keyfree_native() otherwise they
          can crash at thread_exit if ACE is dynamically loaded.

Thu Nov  1 11:59:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Select_Reactor_T.h:
        * ace/Timer_Queue_T.h:
        * ace/Timer_Wheel_T.h:
          Doxygen changes

        * ace/Timer_Queue_T.cpp:
          Layout change

Thu Nov  1 11:11:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Service_Config.h:
          Removed the patch for bugzilla 2980, this results in a memory
          leak of 10Kb for each thread that uses the ACE_Service_Config_Guard.
          This memory leak is documented in bugzilla 3108. For bugzilla 2980
          we need to have a different patch without reintroducing the
          memory leak.

        * ace/Service_Config.cpp: